--- a/gestion_presence/templates/badge.html
+++ b/gestion_presence/templates/badge.html
@@ -6,128 +6,76 @@
     <title>Carte Professionnelle</title>
     <style>
         body {
-            font-family: Arial, sans-serif;
-            background-color: #f4f4f4;
             margin: 0;
             padding: 0;
             display: flex;
-            justify-content: center;
-            align-items: center;
-            height: 100vh;
+            justify-content: left;
+            background-color: white;
         }
         .card {
-            background-color: white;
+            padding: 10px;
+            width: 375px;
+            height: 475px;
+            background-color: #f4f4f4;
+            box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
             border-radius: 10px;
-            width: 350px;
-            box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
-            padding-bottom: 10px;
+            overflow: hidden;
         }
         .header {
             display: flex;
             align-items: center;
+            background-color: #0056b3;
+            padding: 2px;
+            color: white;
         }
         .header img {
             width: 50px;
             height: 50px;
-            margin-right: 8px;
-        }
-        .header p {
-            font-size: 11px;
-            color: white; 
-            padding: 8px;
-            background-color: #0056b3; /* Bleu */
-            text-align: center;
-            border-radius: 50px 0px 0px 50px;
+            margin-right: 5px;
         }
         .photo {
             text-align: center;
+            margin: 0;
         }
-        .photo h2 {
-            font-size: 18px;
-            width: 80%;
-            background-color: #0056b3; /* Bleu */
-            color: white;
-            border-radius: 50px;
-            padding: 4px;
-            margin: auto;
-        }
-        .img {
-            margin-left: 30%;
-            position: relative;
-            width: 120px;
-            height: 160px;
-        }
-        .img img {
-            width: 90%;
-            height: 100%;
+        .photo img {
+            width: 50px;
+            height: 50px;
             object-fit: cover;
-        }
-        .img h3 {
-            height: 12px;
-            position: absolute;
-            top: 0;
-            left: 0;
-            width: 100%;
-            background-color: #007bff; /* Bleu clair */
-            margin: 0;
-            border-radius: 50px 50px 0px 0px;
-        }
-        .img h4 {
-            height: 12px;
-            position: absolute;
-            bottom: 0;
-            left: 0;
-            width: 100%;
-            background-color: #0056b3; /* Bleu */
-            border-radius: 0px 0px 50px 50px;
-            margin: 0;
+            border-radius: 8px;
         }
         .info {
-            padding-left: 10%;
-        }
-        .info p {
-            font-size: 16px;
-            line-height: 0.5;
-            text-align: left;
+            padding: 1px 1px;
+            font-size: 15px;
         }
         .qr-code {
             text-align: center;
-            margin-top: 8px;
-        }
-        .qr-code p {
-            font-size: 12px;
+            
         }
         .qr-code img {
-            width: 80px;
-            height: 80px;
+            width: 100px;
+            height: 100px;
         }
     </style>
 </head>
 <body>
     <div class="card">
         <div class="header">
-            <img src="{local_path}" alt="Logo">
-            <p> Société Interafricaine des Produits 
-            Pharmaceutiques et Parapharmaceutiques</p>
+           
+            <p>Société Interafricaine des Produits Pharmaceutiques et Parapharmaceutiques</p>
         </div>
         <div class="photo">
-            <h2>CARTE PROFESSIONNELLE</h2>
-            <div class="img">
-                <h3></h3>
-                <img src="{photo_path}" alt="Photo">
-                <h4></h4>
-            </div>
+            <img src="{{ photo_path }}" alt="Photo">
         </div>
         <div class="info">
-            <p><strong>Nom : {nom}</strong></p>
-            <p><strong>Prénoms : {prenom}</strong></p>
-            <p><strong>Fonction : {fonction}</strong></p>
-            <p><strong>Matricule : {matricule}</strong></p>
-            <p><strong>N°CNI : {cni}</strong></p>
+            <p><strong>Nom :</strong> {{ nom }}</p>
+            <p><strong>Prénoms :</strong> {{ prenom }}</p>
+            <p><strong>Fonction :</strong> {{ fonction }}</p>
+            <p><strong>Matricule :</strong> {{ matricule }}</p>
+            <p><strong>N°CNI :</strong> {{ cni }}</p>
         </div>
         <div class="qr-code">
-            <p><strong>Scanner pour marquer la présence :</strong></p>
-            <img src="{qr_code_path}" alt="QR Code">
+            <p>Scanner pour marquer la présence :</p>
+            <img src="{{ qr_code_path }}" alt="QR Code">
         </div>
     </div>
 </body>
