--- a/gestion_presence/templates/report.html
+++ b/gestion_presence/templates/report.html
@@ -1,93 +1,55 @@
-
 {% extends 'home.html' %}
+
 {% block content %}
 <!-- Begin Page Content -->
 <div class="container-fluid">
 
     <!-- Page Heading -->
-    <h1 class="h3 mb-2 text-gray-800">Tables</h1>
-    <p class="mb-4">DataTables is a third party plugin that is used to generate the demo table below.
-        For more information about DataTables, please visit the <a target="_blank"
-            href="https://datatables.net">official DataTables documentation</a>.</p>
+    <h1 class="h3 mb-2 text-gray-800">Tableau des Présences</h1>
+    <p class="mb-4">Ce tableau affiche les utilisateurs et leurs présences.</p>
 
     <!-- DataTales Example -->
     <div class="card shadow mb-4">
         <div class="card-header py-3">
-            <h6 class="m-0 font-weight-bold text-primary">DataTables Example</h6>
+            <h6 class="m-0 font-weight-bold text-primary">Liste des Présences</h6>
         </div>
         <div class="card-body">
             <div class="table-responsive">
                 <table class="table table-bordered" id="dataTable" width="100%" cellspacing="0">
                     <thead>
                         <tr>
-                            <th>Name</th>
-                            <th>Position</th>
-                            <th>Office</th>
-                            <th>Age</th>
-                            <th>Start date</th>
-                            <th>Salary</th>
+                            <th>Nom</th>
+                            <th>Fonction</th>
+                            <th>Matricule</th>
+                            <th>CNI</th>
+                            <th>Présences</th>
                         </tr>
                     </thead>
                     <tfoot>
                         <tr>
-                            <th>Name</th>
-                            <th>Position</th>
-                            <th>Office</th>
-                            <th>Age</th>
-                            <th>Start date</th>
-                            <th>Salary</th>
+                            <th>Nom</th>
+                            <th>Fonction</th>
+                            <th>Matricule</th>
+                            <th>CNI</th>
+                            <th>Présences</th>
                         </tr>
                     </tfoot>
                     <tbody>
+                        {% for data in presence_data %}
                         <tr>
-                            <td>Tiger Nixon</td>
-                            <td>System Architect</td>
-                            <td>Edinburgh</td>
-                            <td>61</td>
-                            <td>2011/04/25</td>
-                            <td>$320,800</td>
+                            <td>{{ data.user.first_name }} {{ data.user.last_name }}</td>
+                            <td>{{ data.user.fonction }}</td>
+                            <td>{{ data.user.matricule }}</td>
+                            <td>{{ data.user.cni }}</td>
+                            <td>
+                                <ul>
+                                    {% for presence in data.presences %}
+                                    <li>{{ presence.date }} - {{ presence.get_status_display }} ({{ presence.heure_arrivee }} - {{ presence.heure_depart }})</li>
+                                    {% endfor %}
+                                </ul>
+                            </td>
                         </tr>
-                        <tr>
-                            <td>Garrett Winters</td>
-                            <td>Accountant</td>
-                            <td>Tokyo</td>
-                            <td>63</td>
-                            <td>2011/07/25</td>
-                            <td>$170,750</td>
-                        </tr>
-                        <tr>
-                            <td>Ashton Cox</td>
-                            <td>Junior Technical Author</td>
-                            <td>San Francisco</td>
-                            <td>66</td>
-                            <td>2009/01/12</td>
-                            <td>$86,000</td>
-                        </tr>
-                        <tr>
-                            <td>Cedric Kelly</td>
-                            <td>Senior Javascript Developer</td>
-                            <td>Edinburgh</td>
-                            <td>22</td>
-                            <td>2012/03/29</td>
-                            <td>$433,060</td>
-                        </tr>
-                        <tr>
-                            <td>Airi Satou</td>
-                            <td>Accountant</td>
-                            <td>Tokyo</td>
-                            <td>33</td>
-                            <td>2008/11/28</td>
-                            <td>$162,700</td>
-                        </tr>
-                        <tr>
-                            <td>Brielle Williamson</td>
-                            <td>Integration Specialist</td>
-                            <td>New York</td>
-                            <td>61</td>
-                            <td>2012/12/02</td>
-                            <td>$372,000</td>
-                        </tr>
-                       
+                        {% endfor %}
                     </tbody>
                 </table>
             </div>
@@ -96,6 +58,4 @@
 
 </div>
 <!-- /.container-fluid -->
-
-</div>
 {% endblock %}
