--- a/gestion_presence/templates/formulaire.html
+++ b/gestion_presence/templates/formulaire.html
@@ -1,63 +1,60 @@
 {% extends 'home.html' %}
 
 {% block content %}
-<div class="page-wrapper">
-    <!-- Contenu de la page -->
-    <div class="d-flex align-items-center justify-content-center">
-        <div class="row justify-content-center w-100">
-            <div class="col-md-8 col-lg-6 col-xxl-3">
-                <div class="card mb-0">
-                    <div class="card-body">
-                        <p class="text-center">Créer un employee</p>
+<div class="page-wrapper d-flex align-items-center justify-content-center">
+    <div class="row justify-content-center w-100">
+        <div class="col-md-8 col-lg-6 col-xxl-4">
+            <div class="card shadow-sm border-0">
+                <div class="card-body">
+                    <h4 class="text-center mb-4">Créer un employé</h4>
+                    
+                    <!-- Affichage des messages -->
+                    {% if messages %}
+                        <div class="alert alert-dismissible">
+                            {% for message in messages %}
+                                <div class="alert {{ message.tags }} text-center">{{ message }}</div>
+                            {% endfor %}
+                        </div>
+                    {% endif %}
+                    
+                    <!-- Formulaire d'inscription -->
+                    <form action="/generer_badge" enctype="multipart/form-data" method="post">
+                        {% csrf_token %}
                         
-                        <!-- Affichage des messages -->
-                        {% if messages %}
-                            <ul class="messages">
-                                {% for message in messages %}
-                                    <li {% if message.tags %} class="{{ message.tags }}"{% endif %}>
-                                        <span class="text-danger text-center">{{ message }}</span>
-                                    </li>
-                                {% endfor %}
-                            </ul>
-                        {% endif %}
+                        <div class="mb-3">
+                            <label for="nom" class="form-label">Nom</label>
+                            <input type="text" class="form-control" id="nom" name="nom" required>
+                        </div>
                         
-                        <!-- Formulaire d'inscription -->
-                        <form action="/generer_badge" enctype="multipart/form-data" method="post" >
-                            {% csrf_token %}
-                            
-                            <!-- Champs du formulaire -->
-                            <div class="mb-3">
-                                <label for="nom" class="form-label">Nom</label>
-                                <input type="text" class="form-control" id="nom" name="nom" required>
-                            </div>
-                            <div class="mb-3">
-                                <label for="prenom" class="form-label">Prénom</label>
-                                <input type="text" class="form-control" id="prenom" name="prenom" required>
-                            </div>
-                            <div class="mb-3">
-                                <label for="fonction" class="form-label">Fonction</label>
-                                <input type="text" class="form-control" id="fonction" name="fonction" required>
-                            </div>
-                            <div class="mb-3">
-                                <label for="identifiant" class="form-label">Matricule</label>
-                                <input type="text" class="form-control" id="matricule" name="matricule" required>
-                            </div>
-                            <div class="mb-3">
-                                <label for="cni" class="form-label">Numéro de CNI</label>
-                                <input type="text" class="form-control" id="cni" name="cni" required>
-                            </div>
-                            <div class="mb-3">
-                                <label for="photo" class="form-label">Photo</label>
-                                <input type="file" class="form-control" id="photo" name="photo" accept="image/*" required>
-                            </div>
-                            
-                            <div class="d-flex align-items-center justify-content-center">
-                                <button type="submit" class="btn btn-primary w-100">Créer un utilisateur</button>
-                            </div>
-                        </form>
-
-                      
-                    </div>
+                        <div class="mb-3">
+                            <label for="prenom" class="form-label">Prénom</label>
+                            <input type="text" class="form-control" id="prenom" name="prenom" required>
+                        </div>
+                        
+                        <div class="mb-3">
+                            <label for="fonction" class="form-label">Fonction</label>
+                            <input type="text" class="form-control" id="fonction" name="fonction" required>
+                        </div>
+                        
+                        <div class="mb-3">
+                            <label for="matricule" class="form-label">Matricule</label>
+                            <input type="text" class="form-control" id="matricule" name="matricule" required>
+                        </div>
+                        
+                        <div class="mb-3">
+                            <label for="cni" class="form-label">Numéro de CNI</label>
+                            <input type="text" class="form-control" id="cni" name="cni" required>
+                        </div>
+                        
+                        <div class="mb-3">
+                            <label for="photo" class="form-label">Photo</label>
+                            <input type="file" class="form-control" id="photo" name="photo" accept="image/*" required>
+                        </div>
+                        
+                        <div class="d-flex align-items-center justify-content-center">
+                            <button type="submit" class="btn btn-primary w-100">Créer un utilisateur</button>
+                        </div>
+                    </form>
                 </div>
             </div>
         </div>
