--- a/gestion_presence/templates/home.html
+++ b/gestion_presence/templates/home.html
@@ -29,11 +29,11 @@
         <ul class="navbar-nav bg-gradient-primary sidebar sidebar-dark accordion" id="accordionSidebar">
 
             <!-- Sidebar - Brand -->
-            <a class="sidebar-brand d-flex align-items-center justify-content-center" href="index.html">
+            <a class="sidebar-brand d-flex align-items-center justify-content-center" href={% url 'index' %} >
                 <div class="sidebar-brand-icon rotate-n-15">
                     <i class="fas fa-laugh-wink"></i>
                 </div>
-                <div class="sidebar-brand-text mx-3">Alpresent <sup>2</sup></div>
+                <div class="sidebar-brand-text mx-3">Allpresent <sup>2</sup></div>
             </a>
 
             <!-- Divider -->
@@ -41,9 +41,15 @@
 
             <!-- Nav Item - Dashboard -->
             <li class="nav-item active">
-                <a class="nav-link" href="index.html">
+                <a class="nav-link" href={% url 'index' %} >
                     <i class="fas fa-fw fa-tachometer-alt"></i>
                     <span>Dashboard</span></a>
+            </li>
+            <!-- Divider -->
+            <li class="nav-item active">
+                <a class="nav-link" href={% url 'rapport' %} >
+                    <i class="fas fa-fw fa-tachometer-alt"></i>
+                    <span>Rapport</span></a>
             </li>
 
             <!-- Divider -->
