--- a/gestion_presence/templates/home.html
+++ b/gestion_presence/templates/home.html
@@ -31,7 +31,7 @@
             <!-- Sidebar - Brand -->
             <a class="sidebar-brand d-flex align-items-center justify-content-center" href={% url 'index' %} >
                 <div class="sidebar-brand-icon rotate-n-15">
-                    <i class="fas fa-laugh-wink"></i>
+                    <img src="{% static 'img/logom.png' %}" alt="login" style="width: 100%; height: 100%;"> 
                 </div>
                 <div class="sidebar-brand-text mx-3">Allpresent <sup>2</sup></div>
             </a>
