--- a/gestion_presence/templates/formulaire.html
+++ b/gestion_presence/templates/formulaire.html
@@ -45,11 +45,20 @@
                             <label for="cni" class="form-label">Numéro de CNI</label>
                             <input type="text" class="form-control" id="cni" name="cni" required>
                         </div>
-                        
+                       
+                        <div class="mb-3">
+                            <label for="exampleInputEmail1" class="form-label">Email</label>
+                            <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" name="email" required>
+                          </div>
+                        </div>
+                        <div class="mb-3">
+                            <label for="exampleInputPassword" class="form-label">password</label>
+                            <input type="password" class="form-control form-control-user"
+                                id="exampleInputPassword" placeholder="Password" name="password" >
+                        </div>
                         <div class="mb-3">
                             <label for="photo" class="form-label">Photo</label>
                             <input type="file" class="form-control" id="photo" name="photo" accept="image/*" required>
-                        </div>
                         
                         <div class="d-flex align-items-center justify-content-center">
                             <button type="submit" class="btn btn-primary w-100">Créer un utilisateur</button>
