--- a/gestion_presence/templates/home.html
+++ b/gestion_presence/templates/home.html
@@ -269,7 +269,11 @@
                         <li class="nav-item dropdown no-arrow">
                             <a class="nav-link dropdown-toggle" href="#" id="userDropdown" role="button"
                                 data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                                <span class="mr-2 d-none d-lg-inline text-gray-600 small">Douglas McGee</span>
+                                        {% if user.is_authenticated %}
+                                        <span class="">Bonjour, {{ user.username }}</span>
+                                {% else %}
+                                        <span>Utilisateur non connecté</span>
+                                {% endif %}
                                 <img class="img-profile rounded-circle"
                                     src="img/undraw_profile.svg">
                             </a>
