--- a/gestion_presence/templates/report.html
+++ b/gestion_presence/templates/report.html
@@ -39,7 +39,7 @@
                     <tbody>
                         {% for data in presence_data %}
                         <tr>
-                            <td>{{ data.user.first_name }} {{ data.user.last_name }}</td>
+                            <td><a>{{ data.user.first_name }} {{ data.user.last_name }}</a></td>
                             <td>{{ data.user.fonction }}</td>
                             <td>{{ data.user.matricule }}</td>
                             <td>{{ data.user.cni }}</td>
