--- a/gestion_presence/templates/auth.html
+++ b/gestion_presence/templates/auth.html
@@ -1,6 +1,5 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
     {% load static %}
     <meta charset="utf-8">
@@ -9,103 +8,137 @@
     <meta name="description" content="">
     <meta name="author" content="">
 
-    <title>presence for All</title>
+    <title>Presence for All</title>
 
-    <!-- Custom fonts for this template-->
+    <!-- Custom fonts for this template -->
     <link href="vendor/fontawesome-free/css/all.min.css" rel="stylesheet" type="text/css">
-    <link
-        href="https://fonts.googleapis.com/css?family=Nunito:200,200i,300,300i,400,400i,600,600i,700,700i,800,800i,900,900i"
-        rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Nunito:200,200i,300,300i,400,400i,600,600i,700,700i,800,800i,900,900i" rel="stylesheet">
 
-    <!-- Custom styles for this template-->
+    <!-- Custom styles for this template -->
     <link href="{% static 'css/sb-admin-2.min.css' %}" rel="stylesheet">
     <link href="{% static 'vendor/datatables/dataTables.bootstrap4.min.css' %}" rel="stylesheet">
 
+    <style>
+        .bg-login-image {
+            background: url('{% static "assets/images/logos/background.jpg" %}') center center no-repeat;
+            background-size: cover;
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            text-align: center;
+            padding: 40px;
+        }
+        .welcome-text {
+            font-size: 2.5rem;
+            font-weight: bold;
+            color: white;
+            text-shadow: 3px 3px 6px rgba(0, 0, 0, 0.6);
+            margin-bottom: 20px;
+        }
+        .btn-primary {
+            background-color: #4e73df;
+            border-color: #4e73df;
+            transition: background-color 0.3s ease;
+        }
+        .btn-primary:hover {
+            background-color: #375ab4;
+            border-color: #2a4a8e;
+        }
+        .form-container {
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+            justify-content: center;
+            height: 100vh;
+        }
+        .form-content {
+            width: 100%;
+            max-width: 400px;
+        }
+        .form-control-user {
+            border-radius: 10rem;
+            padding: 1.5rem 1rem;
+        }
+        .custom-checkbox .custom-control-label::before {
+            border-radius: 0.25rem;
+        }
+    </style>
 </head>
 
 <body class="bg-gradient-primary">
+    <div class="container form-container">
+        <div class="text-center welcome-text">
+            Bienvenue dans Presence for All
+        </div>
+        
+        <!-- Affichage des messages -->
+        {% if messages %}
+            <div class="messages">
+                {% for message in messages %}
+                    <div class="alert {% if message.tags %}alert-{{ message.tags }}{% endif %}">
+                        {{ message }}
+                    </div>
+                {% endfor %}
+            </div>
+        {% endif %}
 
-    <div class="container">
-
-        <!-- Outer Row -->
-        <div class="row justify-content-center">
-
-            <div class="col-xl-10 col-lg-12 col-md-9">
-
-                <div class="card o-hidden border-0 shadow-lg my-5">
-                    <div class="card-body p-0">
-                        <!-- Nested Row within Card Body -->
-                        <div class="row">
-                            <div class="col-lg-6 d-none d-lg-block bg-login-image">
-                                <img src="{% static 'img/login.svg' %}" alt="login" style="width: 100%; height: 100%;">
-                            </div>
-                            <div class="col-lg-6">
-                                <div class="p-5">
-                                    <div class="text-center">
-                                        <h1 class="h4 text-gray-900 mb-4">Welcome Back!</h1>
-                                    </div>
-                                    <form action="{% url 'process_login' %}" method="post" class="needs-validation user" novalidate>
-                                        {% csrf_token %}
-                                        
-                                        <div class="form-group">
-                                            <input type="email" name="email" class="form-control form-control-user"
-                                                id="exampleInputEmail" aria-describedby="emailHelp"
-                                                placeholder="Enter Email Address..." required>
-                                        </div>
-                                    
-                                        <div class="form-group">
-                                            <input type="password" name="password" class="form-control form-control-user"
-                                                id="exampleInputPassword" placeholder="Password" required>
-                                        </div>
-                                    
-                                        <div class="form-group">
-                                            <div class="custom-control custom-checkbox small">
-                                                <input type="checkbox" class="custom-control-input" id="customCheck">
-                                                <label class="custom-control-label" for="customCheck">Remember Me</label>
-                                            </div>
-                                        </div>
-                                    
-                                        <button type="submit" class="btn btn-primary btn-user btn-block">
-                                            Login
-                                        </button>
-                                    
-                                        <hr>
-                                       
-                                    </form>
-                                    
-                                </div>
-                            </div>
+        <!-- Login Form -->
+        <div class="card o-hidden border-0 shadow-lg form-content">
+            <div class="card-body p-5">
+                <div class="text-center">
+                    <h1 class="h4 text-gray-900 mb-4">Welcome Back!</h1>
+                </div>
+                <form action="{% url 'process_login' %}" method="post" class="needs-validation user" novalidate>
+                    {% csrf_token %}
+                    
+                    <!-- Email Input -->
+                    <div class="form-group">
+                        <input type="email" name="email" class="form-control form-control-user"
+                            id="exampleInputEmail" aria-describedby="emailHelp"
+                            placeholder="Enter Email Address..." required>
+                    </div>
+                
+                    <!-- Password Input -->
+                    <div class="form-group">
+                        <input type="password" name="password" class="form-control form-control-user"
+                            id="exampleInputPassword" placeholder="Password" required>
+                    </div>
+                
+                    <!-- Remember Me Checkbox -->
+                    <div class="form-group">
+                        <div class="custom-control custom-checkbox small">
+                            <input type="checkbox" class="custom-control-input" id="customCheck">
+                            <label class="custom-control-label" for="customCheck">Remember Me</label>
                         </div>
                     </div>
-                </div>
-
+                
+                    <!-- Submit Button -->
+                    <button type="submit" class="btn btn-primary btn-user btn-block">
+                        Login
+                    </button>
+                
+                    <hr>
+                </form>
             </div>
-
         </div>
-
     </div>
 
+    <!-- JavaScript Libraries -->
     <script src="{% static 'vendor/jquery/jquery.min.js' %}"></script>
     <script src="{% static 'vendor/bootstrap/js/bootstrap.bundle.min.js' %}"></script>
-
-    <!-- Core plugin JavaScript-->
     <script src="{% static 'vendor/jquery-easing/jquery.easing.min.js' %}"></script>
 
-    <!-- Custom scripts for all pages-->
+    <!-- Custom Scripts -->
     <script src="{% static 'js/sb-admin-2.min.js' %}"></script>
 
-    <!-- Page level plugins -->
+    <!-- Page Level Plugins -->
     <script src="{% static 'vendor/chart.js/Chart.min.js' %}"></script>
-
-    <!-- Page level custom scripts -->
-    <script src="{% static 'js/demo/chart-area-demo.js' %}"></script>
-    <script src="{% static 'js/demo/chart-pie-demo.js' %}"></script>
-
     <script src="{% static 'vendor/datatables/jquery.dataTables.min.js' %}"></script>
     <script src="{% static 'vendor/datatables/dataTables.bootstrap4.min.js' %}"></script>
+
+    <!-- Page Level Custom Scripts -->
+    <script src="{% static 'js/demo/chart-area-demo.js' %}"></script>
+    <script src="{% static 'js/demo/chart-pie-demo.js' %}"></script>
     <script src="{% static 'js/demo/datatables-demo.js' %}"></script>
-    <!-- Page level custom scripts -->
-
 </body>
-
 </html>
