--- a/gestion_presence/templates/badge.html
+++ b/gestion_presence/templates/badge.html
@@ -61,7 +61,7 @@
     <div class="card">
         <div class="header">
            
-            <p>Société Interafricaine des Produits Pharmaceutiques et Parapharmaceutiques</p>
+            <p>Société de gestion des services informatiques</p>
         </div>
         <div class="photo">
             <img src="{{ photo_path }}" alt="Photo">
