--- a/gestion_presence/templates/formulaire.html
+++ b/gestion_presence/templates/formulaire.html
@@ -53,7 +53,12 @@
 
                         <div class="mb-3">
                             <label for="password" class="form-label fw-semibold">Mot de passe</label>
-                            <input type="password" class="form-control" id="password" name="password" required>
+                            <div class="input-group">
+                                <input type="password" class="form-control" id="password" name="password" required>
+                                <button type="button" class="btn btn-outline-secondary" id="togglePassword">
+                                    <i class="fas fa-eye"></i>  <!-- Icône "œil" de FontAwesome -->
+                                </button>
+                            </div>
                         </div>
 
                         <div class="mb-3">
@@ -70,4 +75,21 @@
         </div>
     </div>
 </div>
+<script>
+    document.getElementById('togglePassword').addEventListener('click', function () {
+        const passwordInput = document.getElementById('password');
+        const icon = this.querySelector('i');
+
+        // Basculer entre type="password" et type="text"
+        if (passwordInput.type === 'password') {
+            passwordInput.type = 'text';
+            icon.classList.remove('fa-eye');
+            icon.classList.add('fa-eye-slash');  // Changer l'icône en "œil barré"
+        } else {
+            passwordInput.type = 'password';
+            icon.classList.remove('fa-eye-slash');
+            icon.classList.add('fa-eye');  // Revenir à l'icône "œil"
+        }
+    });
+</script>
 {% endblock %}
