--- a/gestion_presence/templates/rapport/rapport.html
+++ b/gestion_presence/templates/rapport/rapport.html
@@ -43,7 +43,7 @@
                             <thead>
                                 <tr>
                                     <th>Date</th>
-                                    <th>Nombre d'heures présentes</th>
+                                    <th>Nombre d'heures supplementaire</th>
                                     <th>Nombre d'heures d'absence</th>
                                     <th>Heures Travaillées</th>
                                 </tr>
